--- a/challenge/index.html
+++ b/challenge/index.html
@@ -49,10 +49,9 @@
                 </div>
             </div>
 
-
             <div class="scripture-filters">
                 <div class="dropdown">
-                    <button onclick="myFunction()" class="dropbtn">Scripture Topics
+                    <button onclick="topicFilter()" class="dropbtn">Scripture Topics
                         <i class="fa fa-caret-down"></i></button>
                     <div id="myDropdown" class="dropdown-content">
                         <a href="#">Acquiring Spiritual Knowledge</a>
@@ -69,13 +68,13 @@
                 </div>
 
                 <div class="dropdown">
-                    <button onclick="myFunction()" class="dropbtn">Scripture Books
+                    <button class="dropbtn">Scripture Books
                         <i class="fa fa-caret-down"></i></button>
                     <div id="myDropdown" class="dropdown-content">
-                        <a href="#">BOM</a>
-                        <a href="#">D&C</a>
-                        <a href="#">NT</a>
-                        <a href="#">OT</a>
+                        <a href="#BOM">BOM</a>
+                        <a href="#DC">D&C</a>
+                        <a href="#NT">NT</a>
+                        <a href="#OT">OT</a>
                     </div>
                 </div>
             </div>
