--- a/challenge/study.html
+++ b/challenge/study.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>Scripture study</h1>
+    <h1>Scripture Study</h1>
 
     <div class="scripture-filters">
       <!-- <div class="dropdown">
@@ -35,56 +35,28 @@
               </div> -->
 
       <div class="dropdown">
-        <button onclick = "bookFilter()" class="dropbtn"> Scripture Books <i class="fa fa-caret-down"></i></button>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="#BOM">BOM</a>
-          <a href="#DC">D&C</a>
-          <a href="#NT">NT</a>
-          <a href="#OT">OT</a>
-        </div>
+        <select id="mySelect" class="dropbtn" onchange="bookFilter()">Scripture Books
+          <!-- <button class="dropbtn"> Scripture Books <i class="fa fa-caret-down"></i></button> -->
+          <div id="myDropdown" class="dropdown-content">
+            <option>Scripture Books</option>
+            <option value ="BOM">Book of Mormon</option>
+            <option value ="DC">Doctrine and Covenants</option>
+            <option value ="NT">New Testament</option>
+            <option value ="OT">Old Testament</option>
+          </div>
+        </select>
       </div>
+      <p id="demo"></p>
     </div>
     </div>
 
   </header>
   <main>
-    <!-- <button id ='load'>Load Scriptures</button> -->
+
     <div id='scriptureList'></div>
 
   </main>
-  <!-- <footer>
-        <h3>Filter By</h3>
-        <div class="scripture-filters">
-            <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Scripture Topics
-                    <i class="fa fa-caret-down"></i></button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="#">Acquiring Spiritual Knowledge</a>
-                  <a href="#">The Godhead</a>
-                  <a href="#">The Plan of Salvation</a>
-                  <a href="#">The Atonement of Jesus Christ</a>
-                  <a href="#">The Restoration</a>
-                  <a href="#">Prophets and Revelation</a>
-                  <a href="#">Priesthood and Priesthood Keys</a>
-                  <a href="#">Ordinances and Covenants</a>
-                  <a href="#">Marriage and Family</a>
-                  <a href="#">Commandments</a>
-                </div>
-              </div>
-            
-              <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Scripture Topics
-                    <i class="fa fa-caret-down"></i></button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="#">BOM</a>
-                  <a href="#">D&C</a>
-                  <a href="#">NT</a>
-                  <a href="#">OT</a>
-                </div>
-              </div>
-            </div>
 
-    </footer> -->
 </body>
 
 
