--- a/team/week10/index.html
+++ b/team/week10/index.html
@@ -4,19 +4,21 @@
     <meta charset="utf-8" />
         <title>Local Quakes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <header>
             <nav>
+                <h1>Quake List</h1>
                 <heading>
                     <nav><ul id="mainNav"></ul></nav>
                 </heading>
             </nav>
         </header>
         <main id="content">
-            <h1>Quake List</h1>
             <ul id="quakeList" class=""></ul>
+           
         </main>
             <script src="index.js" type="module"></script>
     </body>
