readings and code samples

--- a/week10/notes.html
+++ b/week10/notes.html
@@ -55,8 +55,8 @@
 
         <h3>Code Samples</h3>
         <ul>
-            <!-- <li><a href="code.html">Code from Readings</a></li> -->
-            <li><a href="code2.html">Readings Game Example</a></li>
+            <li><a href="code.html">Code from Readings</a></li>
+            <li><a href="code2.html">Readings Example</a></li>
             <li><a href="/portfolio/team/week10">Team Project Code</a></li>
         </ul>
     </main>
