--- a/week10/code2.html
+++ b/week10/code2.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 330 Portal</title>
-    <meta name="author" content="Tiffany Quinlan" />
-    <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Fetch API Demo</title>
+  <meta name="author" content="Tiffany Quinlan" />
+  <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
-    <link rel="stylesheet" href="design.css">
+  <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
+  <link rel="stylesheet" href="design.css">
 </head>
-<html>
+
+
 
 <body>
-    <section></section>
-      <footer>
-        <script src="main.js"></script>
-      </footer>
+  <div class="container"></div>
+  <script src="app.js"></script>
 </body>
+
 </html>
