--- a/week10/code2.html
+++ b/week10/code2.html
@@ -17,8 +17,15 @@
 
 
 <body>
+ <header>
+   This page uses a fetch request inside of a try catch async function
+ </header>
+
   <div class="container"></div>
   <script src="app.js"></script>
+  <p> example of fetch found at 
+    <a href="https://www.javascripttutorial.net/javascript-fetch-api/" target="_blank">javascripttutorial.net</a>
+  </p>
 </body>
 
 </html>
