--- a/week10/code2.html
+++ b/week10/code2.html
@@ -11,21 +11,28 @@
   <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
   <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
+  <link rel="stylesheet" href="/portfolio/CSS/styles.css">
   <link rel="stylesheet" href="design.css">
 </head>
 
 
 
 <body>
- <header>
-   This page uses a fetch request inside of a try catch async function
- </header>
-
+  <header>
+   Fetch Example
+  </header>
+  <body>
+    
+<h2> This page uses a fetch request inside of a try catch async function</h2>
   <div class="container"></div>
   <script src="app.js"></script>
-  <p> example of fetch found at 
+  <p> example of fetch found at
     <a href="https://www.javascripttutorial.net/javascript-fetch-api/" target="_blank">javascripttutorial.net</a>
   </p>
 </body>
+<footer>
+  <script src="main.js"></script>
+  <p> <a href="/portfolio/week10/notes.html">Week 10</a> Created by Tiffany H | Copyright 2020</p>
+</footer>
 
 </html>
