--- a/week10/code2.html
+++ b/week10/code2.html
@@ -19,20 +19,21 @@
 
 <body>
   <header>
-   Fetch Example
+    Fetch Example
   </header>
-  <body>
-    
-<h2> This page uses a fetch request inside of a try catch async function</h2>
-  <div class="container"></div>
-  <script src="app.js"></script>
-  <p> example of fetch found at
-    <a href="https://www.javascripttutorial.net/javascript-fetch-api/" target="_blank">javascripttutorial.net</a>
-  </p>
+
+  <main>
+    <h2> This page uses a fetch request inside of a try catch async function</h2>
+    <div class="container"></div>
+    <script src="app.js"></script>
+    <p> example of fetch found at
+      <a href="https://www.javascripttutorial.net/javascript-fetch-api/" target="_blank">javascripttutorial.net</a>
+    </p>
+  </main>
+  <footer>
+    <script src="main.js"></script>
+    <p> <a href="/portfolio/week10/notes.html">Week 10</a> Created by Tiffany H | Copyright 2020</p>
+  </footer>
 </body>
-<footer>
-  <script src="main.js"></script>
-  <p> <a href="/portfolio/week10/notes.html">Week 10</a> Created by Tiffany H | Copyright 2020</p>
-</footer>
 
 </html>
