updates to game (score and time)

--- a/challenge/study.html
+++ b/challenge/study.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Doctrinal Mastery Game" />
   <link rel="stylesheet" href="CSS/normalize.css">
   <link rel="stylesheet" href="CSS/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100;1,300&family=Russo+One&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="module" src="js/main.js"></script>
 
@@ -39,10 +40,10 @@
           <!-- <button class="dropbtn"> Scripture Books <i class="fa fa-caret-down"></i></button> -->
           <div id="myDropdown" class="dropdown-content">
             <option>Scripture Books</option>
-            <option value ="BOM">Book of Mormon</option>
-            <option value ="DC">Doctrine and Covenants</option>
-            <option value ="NT">New Testament</option>
-            <option value ="OT">Old Testament</option>
+            <option value="BOM">Book of Mormon</option>
+            <option value="DC">Doctrine and Covenants</option>
+            <option value="NT">New Testament</option>
+            <option value="OT">Old Testament</option>
           </div>
         </select>
       </div>
@@ -56,6 +57,10 @@
     <div id="scriptureList"></div>
 
   </main>
+
+  <footer>
+    <p>Tiffany Hofhiens | Copyright 2020</p>
+  </footer>
 
 </body>
 
