testing script for answers

--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -27,8 +27,11 @@
 
         <div id='question'></div>
         <form id='response'>
-            <input name='answer' type='text'>
-            <!-- <div id='answer'></div> -->
+            <!-- <input name='answer' type='text'> -->
+            <input type="radio" name="answer" value="correct"> reference 1 <br>
+            <!-- <input type="radio" name="choice1" value="worng"> reference 2 <br> -->
+            <!-- <input type="radio" name="answer" value="worng"> reference 3 <br>
+            <input type="radio" name="answer" value="worng"> reference 4 <br> -->
             <button type='submit'>Submit Answer</button>
         </form>
 
