troublshooting Q&A for quiz

--- a/challenge/practice.html
+++ b/challenge/practice.html
@@ -19,9 +19,9 @@
 
  
                 <h3 id="question"></h3>
-                <input type="radio" name="answer" value="" id="a1"><label for="a1"></label>
-                <input type="radio" name="answer" value="" id="a2"><label for="a2"></label>
-                <input type="radio" name="answer" value="" id="a3"><label for="a3"></label>
+                <input type="radio" name="answer" value="" id="a1"><label for="a1"></label><br>
+                <input type="radio" name="answer" value="" id="a2"><label for="a2"></label><br>
+                <input type="radio" name="answer" value="" id="a3"><label for="a3"></label><br>
                 <input type="radio" name="answer" value="" id="a4"><label for="a4"></label>
                 <p>
                 <button id="next">Next</button>
