added question and answer to quiz.

--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -25,14 +25,14 @@
         <div id='info'></div>
         <div id='result'></div>
 
-        <div id='question'></div>
+        <div id='question'></div><br>
         <form id='response'>
-            <!-- <input name='answer' type='text'> -->
-            <input type="radio" name="answer" value="correct"> reference 1 <br>
-            <!-- <input type="radio" name="choice1" value="worng"> reference 2 <br> -->
-            <!-- <input type="radio" name="answer" value="worng"> reference 3 <br>
-            <input type="radio" name="answer" value="worng"> reference 4 <br> -->
-            <button type='submit'>Submit Answer</button>
+            <input type="radio" name="answer" value="" id="a1"><label for="a1"></label><br>
+            <input type="radio" name="answer" value="" id="a2"><label for="a2"></label><br>
+            <input type="radio" name="answer" value="" id="a3"><label for="a3"></label><br>
+            <input type="radio" name="answer" value="" id="a4"><label for="a4"></label><br>
+            <button id="next">Next</button>
+            <!-- <button type='submit'>Submit Answer</button> -->
         </form>
 
         <div class=stats>
@@ -40,7 +40,7 @@
         <div id='timer'>Time: <strong>20</strong></div>
         </div>
 
-        <h2 id='phrase'>What type of language is JS?</h2>
+        <!-- <h2 id='phrase'>What type of language is JS?</h2>
         <br>
         <form >
         <input type="radio" name="choice" value="Scripting"> Scripting
@@ -48,7 +48,7 @@
         <input type="radio" name="choice" value="Application"> Application
         <input type="radio" name="choice" value="None of These"> None of These
         </form>
-        <button onclick="submitAnswer()">Submit Answer</button>
+        <button onclick="submitAnswer()">Submit Answer</button> -->
 
     </div>
        
