--- a/challenge/practice.html
+++ b/challenge/practice.html
@@ -14,10 +14,7 @@
 
 <body>
     <main>
-    <div class='container'>
-
-
- 
+    <!-- <div class='container'> -->
                 <h3 id="question"></h3>
                 <input type="radio" name="answer" value="" id="a1"><label for="a1"></label><br>
                 <input type="radio" name="answer" value="" id="a2"><label for="a2"></label><br>
@@ -27,8 +24,9 @@
                 <button id="next">Next</button>
 
   
-            </main>
-    </div>
+            <!-- </div> -->
+    </main>
+   
     <footer>
         <br> created by Tiffany Hofhiens 2020
     </footer>
