--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -31,13 +31,13 @@
             <input type="radio" name="answer" value="" id="a2"><label for="a2"></label><br>
             <input type="radio" name="answer" value="" id="a3"><label for="a3"></label><br>
             <input type="radio" name="answer" value="" id="a4"><label for="a4"></label><br>
-            <button id="next">Next</button>
-            <!-- <button type='submit'>Submit Answer</button> -->
+            <!-- <button id="next">Next</button> -->
+            <button type='submit'>Submit Answer</button>
         </form>
 
         <div class=stats>
         <div id='score'>Score: <strong>0</strong></div>
-        <div id='timer'>Time: <strong>20</strong></div>
+        <div id='timer'>Time: <strong>50</strong></div>
         </div>
 
         <!-- <h2 id='phrase'>What type of language is JS?</h2>
