--- a/challenge/index.html
+++ b/challenge/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Tiffany Quinlan" />
     <meta name="description" content="Doctrinal Mastery Game" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100;1,300&family=Russo+One&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
+    <link rel="stylesheet" href="/portfolio/challenge/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="js/main.js"></script>
 </head>
