--- a/challenge/study.html
+++ b/challenge/study.html
@@ -5,7 +5,7 @@
   <meta name="author" content="Tiffany Quinlan" />
   <meta name="description" content="Doctrinal Mastery Game" />
   <link rel="stylesheet" href="CSS/normalize.css">
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="/portfolio/challenge/css/styles.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100;1,300&family=Russo+One&display=swap"
     rel="stylesheet">
