added css and links

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Doctrinal Mastery Game" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100;1,300&family=Russo+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/portfolio/challenge/css/normalize.css">
-    <link rel="stylesheet" href="/portfolio/challenge/css/styles.css">
+    <!-- <link rel="stylesheet" href="/portfolio/challenge/css/styles.css"> -->
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="js/main.js"></script>
 </head>
@@ -23,13 +24,13 @@
         <h2>Games</h2>
         <div class='games'>
             <a type="button" href="speed.html">Speed</a>
-            <a type="button" href="Memory.html">Memory</a>
+            <a type="button" href="memory.html">Memory</a>
         </div>
 
 
         <h2>Review</h2>
         <div clsass='study'>
-            <a type="button" href="study.html">study</a>
+            <a type="button" href="study.html">Study</a>
         </div>
 
 
