added css and links

--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -5,20 +5,21 @@
     <meta name="author" content="Tiffany Quinlan" />
     <meta name="description" content="Doctrinal Mastery Game" />
     <link rel="stylesheet" href="CSS/normalize.css">
-    <!-- <link rel="stylesheet" href="/portfolio/challenge/css/styles.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- <link rel="stylesheet" href="/portfolio/challenge/css/design.css"> -->
-    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="/portfolio/challenge/css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <link rel="stylesheet" href="/portfolio/challenge/css/design.css">
+    <!-- <link rel="stylesheet" href="css/design.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100;1,300&family=Russo+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <script type="module" src="js/ls.js"></script> -->
+    
 </head>
 
 <html>
 
 <body>
     <header>
-        <div class="fixed"><i class="fa fa-home fa-2x" aria-hidden="true"></i></div>
+        <!-- <a href="challenge/">Final Project</a> -->
+        <div class="fixed"><a href="/index/challenge.html" class="icon"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
         
         <h1>Scripture Speed</h1>
         <div id=reference></div>
@@ -38,6 +39,7 @@
             <button type='submit'>Submit Answer</button>
         </form>
 
+        <button id='review'>Review Questions</button>
         <div id='result'></div>
 
         <div class=stats>
