links and css fixes

--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -18,9 +18,7 @@
 
 <body>
     <header>
-        <!-- <a href="challenge/">Final Project</a> -->
-        <div class="fixed"><a href="/index/challenge.html" class="icon"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
-        
+        <div class="relative"><a href="/portfolio/challenge.html" class="icon"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
         <h1>Scripture Speed</h1>
         <div id=reference></div>
     </header>
