--- a/challenge/study.html
+++ b/challenge/study.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <div class="relative"><a href="/portfolio/challenge.html" class="icon"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
+    <div class="relative"><a href="/portfolio/challenge" class="icon"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
     <h1>Scripture Study</h1>
 
     <div class="scripture-filters">
