--- a/challenge/index.html
+++ b/challenge/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/portfolio/challenge/css/styles.css">
     <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="module" src="js/main.js"></script>
+    <!-- <script type="module" src="js/main.js"></script> -->
 </head>
 <html>
 
