--- a/challenge/memory.html
+++ b/challenge/memory.html
@@ -3,33 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing Space</title>
-    <meta name="description" content="test code" />
+    <title>Memory Game</title>
+    <meta name="description" content="Memory Game" />
     <meta name="author" content="Tiffany Quinlan" />
     <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/portfolio/challenge/css/styles.css">
+    <!-- <link rel="stylesheet" href="/portfolio/challenge/css/design.css"> -->
+    <link rel="stylesheet" href="css/design.css">
     <script src="https://kit.fontawesome.com/53224be697.js" crossorigin="anonymous"></script>
-    <script type="module" src="js/testScript.js"></script>
 </head>
 
 <body>
-    <main>
-            <!-- <div class='container'> -->
-                <h3 id="question"></h3>
-                <input type="radio" name="answer" value="" id="a1"><label for="a1"></label><br>
-                <input type="radio" name="answer" value="" id="a2"><label for="a2"></label><br>
-                <input type="radio" name="answer" value="" id="a3"><label for="a3"></label><br>
-                <input type="radio" name="answer" value="" id="a4"><label for="a4"></label>
-                <p>
-                <button id="next">Next</button>
 
-  
-            <!-- </div> -->
+    <header>
+        <div class="relative"><a href="/portfolio/challenge" class="icon"><i class="fa fa-home fa-2x"
+                    aria-hidden="true"></i></a></div>
+        <h1>Scripture Memory</h1>
+    </header>
+    <main>
+
+
+        <div class ='board'>
+            <div id=cards>1 ref</div>
+            <div id=cards>4 phrase</div>
+            <div id=cards>2 ref</div>
+            <div id=cards>3 phrase</div>
+            <div id=cards>6 phrase</div>
+            <div id=cards>3 ref</div>
+            <div id=cards>5 phrase</div>
+            <div id=cards>4 ref</div>
+            <div id=cards>1 phrase</div>
+            <div id=cards>5 ref</div>
+            <div id=cards>2 phrase</div>
+            <div id=cards>1 ref</div>
+        </div>
+
+
+        <div class=stats>
+            <div id='score1'>Team 1 points: <strong>0</strong></div>
+            <div id='score2'>Team 2 points: <strong>0</strong></div>
+        </div>
+
+        </div>
     </main>
-   
     <footer>
-        <br> created by Tiffany Hofhiens 2020
+        <p>Tiffany Hofhiens | Copyright 2020</p>
+        <!-- <script type="module" src="js/memory.js"></script> -->
     </footer>
+
 </body>
 
 </html>
