--- a/challenge/study.html
+++ b/challenge/study.html
@@ -4,7 +4,7 @@
   <title>Study</title>
   <meta name="author" content="Tiffany Quinlan" />
   <meta name="description" content="Doctrinal Mastery Game" />
-  <link rel="stylesheet" href="CSS/normalize.css">
+  <link rel="stylesheet" href="/portfolio/challenge/css/normalize.css">
   <link rel="stylesheet" href="/portfolio/challenge/css/styles.css">
   <!-- <link rel="stylesheet" href="css/styles.css"> -->
   <link
