--- a/challenge/memory.html
+++ b/challenge/memory.html
@@ -7,9 +7,10 @@
     <meta name="description" content="Memory Game" />
     <meta name="author" content="Tiffany Quinlan" />
     <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
+    <link rel="stylesheet" href="/portfolio/challenge/css/normalize.css">
     <link rel="stylesheet" href="/portfolio/challenge/css/styles.css">
-    <!-- <link rel="stylesheet" href="/portfolio/challenge/css/design.css"> -->
-    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="/portfolio/challenge/css/design.css">
+    <!-- <link rel="stylesheet" href="css/design.css"> -->
     <script src="https://kit.fontawesome.com/53224be697.js" crossorigin="anonymous"></script>
 </head>
 
