--- a/challenge/memory.html
+++ b/challenge/memory.html
@@ -19,7 +19,7 @@
     <header>
         <div class="relative"><a href="/portfolio/challenge" class="icon"><i class="fa fa-home fa-2x"
                     aria-hidden="true"></i></a></div>
-        <h1>Scripture Memory</h1>
+        <h1>Memory</h1>
     </header>
     <main>
 
