--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="relative"><a href="/portfolio/challenge" class="icon"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
-        <h1>Scripture Speed</h1>
+        <h1>Speed</h1>
         <div id=reference></div>
     </header>
     <main>
