--- a/challenge/study.html
+++ b/challenge/study.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <div class="relative"><a href="/portfolio/challenge" class="icon"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
-    <h1>Scripture Study</h1>
+    <h1>Study</h1>
 
     <div class="scripture-filters">
       <select id="selectTopic" class="dropbtn" onchange="topicFilter()">Scripture Topics
