--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="week8/notes.html">Week 8</a></li>
             <li><a href="week9/notes.html">Week 9</a></li>
             <li><a href="week10/notes.html">Week 10</a></li>
+            <li><a href="week14/notes.html">Week 14</a></li>
             <li><a href="challenge/">Final Project</a></li>
         </ul>
 
