--- a/week14/notes.html
+++ b/week14/notes.html
@@ -10,6 +10,7 @@
         rel="stylesheet"> -->
     <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
     <link rel="stylesheet" href="/portfolio/CSS/styles.css">
+    <link rel="stylesheet" href="design.css">
 </head>
 <html>
 
@@ -82,10 +83,7 @@
                 Get Reviews and Feedback
                 <li>Week 14 </li>
                 Create project report and submit
-
             </ul>
-
-
         </div>
 
         <div>
